test/error.test.txt
=== unterminated object
{"a": 1
---
SyntaxError: Unexpected end of input on line 1.

    {"a": 1
    .......^

=== unterminated array
[1, 2
---
SyntaxError: Unexpected end of input on line 1.

    [1, 2
    .....^

=== unterminated string
"Hello
---
Use """ for multiline strings or escape newlines with "\n" on line 1.

    "Hello
    ......^

=== backslash at end of string
"abc\
---
Invalid escape sequence "\n" on line 1.

    "abc\
    .....^

=== invalid escape sequence
"bad \q escape"
---
Invalid escape sequence "q" on line 1.

    "bad \q escape"
    ......^

=== invalid unicode escape (too short)
"\u263"
---
SyntaxError: Invalid Unicode escape sequence on line 1.

    "\u263"
    ......^

=== invalid unicode escape (bad hex)
"\u26G4"
---
 SyntaxError: Invalid Unicode escape sequence on line 1.

    "\u26G4"
    .....^

=== newline in string literal
"line1
line2"
---
SyntaxError: Use """ for multiline strings or escape newlines with "\n" on line 1.

    "line1
    ......^

=== multiple values in a single document
{}[]
---
SyntaxError: Unexpected character "[" on line 1.

    {}[]
    ..^

=== object missing colon
{"a" 1}
---
SyntaxError: Unexpected character "1" on line 1.

    {"a" 1}
    .....^

=== object double colon
{"a"::1}
---
SyntaxError: Unexpected character ":" on line 1.

    {"a"::1}
    .....^

=== object key without value
{"a":}
---
SyntaxError: Unexpected character "}" on line 1.

    {"a":}
    .....^

=== value without key
{:1}
---
SyntaxError: Unexpected character ":" on line 1.

    {:1}
    .^

=== single quotes not allowed
{'a': 1}
---
SyntaxError: Unexpected character "'" on line 1.

    {'a': 1}
    .^

=== missing separator between pairs (same line)
{"a":1 "b":2}
---
Expected comma or newline between key-value pairs on line 1.

    {"a":1 "b":2}
    .......^

=== leading comma in array
[,1]
---
SyntaxError: Unexpected character "," on line 1.

    [,1]
    .^

=== leading comma in object
{,"a":1}
---
SyntaxError: Unexpected character "," on line 1.

    {,"a":1}
    .^

=== double comma in array
[1,,2]
---
SyntaxError: Unexpected character "," on line 1.

    [1,,2]
    ...^

=== missing separator in array
[1 2]
---
SyntaxError: Expected comma or newline between values on line 1.

    [1 2]
    ...^

=== trailing data after value
{"a":1} {"b":2}
---
SyntaxError: Unexpected character "{" on line 1.

    {"a":1} {"b":2}
    ........^

=== invalid number: leading zero
01
---
SyntaxError: Unexpected character "1" on line 1.

    01
    .^

=== invalid number: explicit plus sign
+1
---
SyntaxError: Unexpected character "+" on line 1.

    +1
    ^

=== invalid number: leading decimal point
.5
---
SyntaxError: Unexpected character "." on line 1.

    .5
    ^

=== invalid digit after minus
-a
---
SyntaxError: Unexpected character "a" on line 1.

    -a
    .^

=== invalid digit in float
1.a
---
SyntaxError: Unexpected character "a" on line 1.

    1.a
    ..^

=== invalid exponent (missing digits)
1e
---
SyntaxError: Unexpected character "\n" on line 1.

    1e
    ..^

=== invalid exponent sign only
1e+
---
SyntaxError: Unexpected character "\n" on line 1.

    1e+
    ...^

=== NaN not allowed
NaN
---
SyntaxError: Unexpected character "N" on line 1.

    NaN
    ^

=== Infinity not allowed
Infinity
---
SyntaxError: Unexpected character "I" on line 1.

    Infinity
    ^

=== colon after complete value
{"a":1}:2
---
SyntaxError: Unexpected character ":" on line 1.

    {"a":1}:2
    .......^

=== whitespace only

---
SyntaxError: Unexpected end of input on line 1.


    ^

=== comment without value
# comment only
---
SyntaxError: Unexpected end of input on line 1.

    # comment only
    ..............^

=== wrong keyword
falze
---
SyntaxError: Unexpected character "z" on line 1.

    falze
    ...^

=== character after a keyword
nullnull
---
SyntaxError: Unexpected character "n" on line 1.

    nullnull
    ....^

=== identifier with dot (invalid char)
{a.b:1}
---
SyntaxError: Unexpected character "." on line 1.

    {a.b:1}
    ..^

=== identifier with slash (invalid char)
{a/b:1}
---
SyntaxError: Unexpected character "/" on line 1.

    {a/b:1}
    ..^

=== identifier with at-sign (invalid char)
{foo@bar:1}
---
SyntaxError: Unexpected character "@" on line 1.

    {foo@bar:1}
    ....^

=== space between identifier and value (missing colon)
{a 1}
---
SyntaxError: Unexpected character "1" on line 1.

    {a 1}
    ...^

=== missing separator between pairs (identifiers, same line)
{a:1 b:2}
---
Expected comma or newline between key-value pairs on line 1.

    {a:1 b:2}
    .....^

=== bare identifier as a top-level value (not allowed)
foo
---
SyntaxError: Unexpected character "o" on line 1.

    foo
    .^

=== identifier used as value (must be quoted or literal)
{key: value}
---
SyntaxError: Unexpected character "v" on line 1.

    {key: value}
    ......^

=== identifier as array element (not allowed as bare value)
[foo]
---
SyntaxError: Unexpected character "o" on line 1.

    [foo]
    ..^

=== non-ASCII letter in identifier key
{ä:1}
---
SyntaxError: Unexpected character "ä" on line 1.

    {ä:1}
    .^

=== leading dot before identifier
{.a:1}
---
SyntaxError: Unexpected character "." on line 1.

    {.a:1}
    .^

=== emoji in identifier key
{😀:1}
---
SyntaxError: Unexpected character "\ud83d" on line 1.

    {😀:1}
    .^

=== digit+dot in identifier key (dot invalid)
{0.1:1}
---
SyntaxError: Unexpected character "." on line 1.

    {0.1:1}
    ..^

=== exponent-like key with plus (plus invalid in identifier)
{1e+2:1}
---
SyntaxError: Unexpected character "+" on line 1.

    {1e+2:1}
    ...^

=== dollar sign in identifier
{a$:1}
---
SyntaxError: Unexpected character "$" on line 1.

    {a$:1}
    ..^

=== decimal point in digit-only identifier
{1234.5: 1}
---
SyntaxError: Unexpected character "." on line 1.

    {1234.5: 1}
    .....^

=== identifier followed by comma instead of colon
{a,}
---
SyntaxError: Unexpected character "," on line 1.

    {a,}
    ..^

=== identifier key without value
{a:}
---
SyntaxError: Unexpected character "}" on line 1.

    {a:}
    ...^

=== object in array missing separator (between elements)
[{a:1} {b:2}]
---
SyntaxError: Expected comma or newline between values on line 1.

    [{a:1} {b:2}]
    .......^

=== tilde in identifier (invalid char)
{a~b:1}
---
SyntaxError: Unexpected character "~" on line 1.

    {a~b:1}
    ..^

=== double colon after identifier key
{a::1}
---
SyntaxError: Unexpected character ":" on line 1.

    {a::1}
    ...^

=== backslash in identifier key
{a\b:1}
---
SyntaxError: Unexpected character "\\" on line 1.

    {a\b:1}
    ..^

=== array object missing colon after identifier key
[{a 1}]
---
SyntaxError: Unexpected character "1" on line 1.

    [{a 1}]
    ....^

=== multiline string without closing
"""
foo
---
SyntaxError: Unexpected end of input on line 2.

    foo
    ...^

=== empty multiline single-line
""""""
---
SyntaxError: Multiline strings cannot be empty on line 1.

    """"""
    ......^
